--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
-/.env
+/vendor/
+node_modules/
+# public/assets/img/
+# public/assets/vendor/
+# public/
+npm-debug.log
+yarn-error.log
+
+# Laravel 4 specific
+bootstrap/compiled.php
+app/storage/
+
+# Laravel 5 & Lumen specific
+public/storage
+public/hot
+
+# Laravel 5 & Lumen specific with changed public path
+public_html/storage
+public_html/hot
+
 /storage
-/vendor
+storage/*.key
+.env
+Homestead.yaml
+Homestead.json
+/.vagrant
+.phpunit.result.cache
+/composer.lock
