--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@headlessui/vue": "^1.7.18",
         "@heroicons/vue": "^2.1.1",
         "@vitejs/plugin-vue": "^5.0.3",
+        "firebase": "^10.14.0",
         "moment": "^2.30.1",
         "pinia": "^2.1.7",
         "pinia-plugin-persistedstate": "^3.2.1",
