--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
         "arafat69/laravel-repository": "^1.1",
         "barryvdh/laravel-dompdf": "^2.2",
         "endroid/qr-code": "^5.0",
+        "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "^7.2",
         "joynala/boiler": "^1.2",
         "joynala/web-installer": "^2.3",
+        "kreait/firebase-php": "^7.15",
+        "kreait/laravel-firebase": "^5.9",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
